# capsula-example

./: README.ja.md  README.md  capsula.toml  pyproject.toml
.github/workflows/: ci.yaml
scripts/: calc_pi.py
