[project]
name = "capsula-example"
version = "0.1.0"
description = "Example repository that demonstrates how to use Capsula"
readme = "README.md"
requires-python = ">=3.13"
authors = [
  { name = "Shunichiro Nomura", email = "nomura@space.t.u-tokyo.ac.jp" },
]
dependencies = [
  "rich>=14.2.0",
  "typer>=0.20.0",
]

[dependency-groups]
dev = [
  "pre-commit>=4.2.0",
  { include-group = "ruff" },
  { include-group = "typing" },
]
ruff = ["ruff>=0.11.13"]
typing = [
  "mypy>=1.16.1",
]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
# Modify the following rules according to your preferences
ignore = [
  # "PLR2004", # magic numbers
  "S101",  # use of assert
  "G",  # logging format
  # "ANN101",  # missing type annotation for self in method
  #     "ANN102",  # missing type annotation for cls in classmethod
  #     "D100",    # missing docstring in public module
  #     "D101",    # missing docstring in public class
  #     "D102",    # missing docstring in public method
  #     "D103",    # missing docstring in public function
  #     "D104",    # missing docstring in public package
  #     "D105",    # missing docstring in magic method
  #     "D107",    # missing docstring in __init__
  "D203",  # 1 blank line required before class docstring
  "D213",  # multi-line docstring summary should start at the second line
  # "PGH003",  # Use specific rule codes when ignoring type issues
  #     "RET505",  # Unnecessary `else` after `return` statement
  "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
  # "D401",    # First line should be in imperative mood
  "TD002",  # Missing author in TODO
  "TD003",  # add link on issue into TODO
  # "PLR0913", # Too many arguments to function call
  #     "D407",    # Missing dashed underline after section
  #     "ERA001",  # Commented out code
  "FIX002",  # Fixme comment
  # "S311",    # suspicious-non-cryptographic-random-usage
  #     "EM101",   # raw-string-in-exception
  #     "TRY003",  # Avoid specifying long messages outside the exception class
  # "UP040", # uses `TypeAlias` annotation instead of the `type` keyword. This is to be compatible with griffe.
  "INP001",  # implicit-namespace-package
  "D100",  # missing docstring in public module
  "S311",  # standard-pseudo-random-generators-are-not-suitable-for-security-cryptographic-purposes
]
unfixable = [
  "F401",  # Prevent auto-fix for unused imports
]
